# rustrict-shuttle

./: Cargo.toml  README.md  Shuttle.toml
src/: index.html  lib.rs  main.rs
