[package]
name = "rustrict-shuttle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shuttle-service = { version = "0.7.1", features = ["web-rocket"] }
rocket = "0.5.0-rc.2"
rustrict = {version = "0.5.9", features = ["width"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
