[package]
name = "rustrict-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-rocket = "0.29.0"
shuttle-runtime = "0.29.0"
rocket = "0.5.0-rc.2"
rustrict = {version = "0.7.11", features = ["width"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
tokio = {version = "1", features=["full"]}
